--- a/config/moveit_controllers.yaml
+++ b/config/moveit_controllers.yaml
@@ -4,11 +4,9 @@ moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControll
 
 moveit_simple_controller_manager:
   controller_names:
-    - yaskawa_arm
-    - yaskawa_fingers
-    - yaskawa_push
+    - yaskawa_arm_controller
 
-  yaskawa_arm:
+  yaskawa_arm_controller:
     type: FollowJointTrajectory
     action_ns: follow_joint_trajectory
     default: true
@@ -20,26 +18,3 @@ moveit_simple_controller_manager:
       - joint_r
       - joint_b
       - joint_t
-    action_ns: follow_joint_trajectory
-    default: true
-  yaskawa_fingers:
-    type: GripperCommand
-    joints:
-      - right_joint
-    action_ns: gripper_cmd
-    default: true
-  yaskawa_push:
-    type: FollowJointTrajectory
-    action_ns: follow_joint_trajectory
-    default: true
-    joints:
-      - joint_s
-      - joint_l
-      - joint_e
-      - joint_u
-      - joint_r
-      - joint_b
-      - joint_t
-      - right_joint
-    action_ns: follow_joint_trajectory
-    default: true
