--- a/config/initial_positions.yaml
+++ b/config/initial_positions.yaml
@@ -1,11 +1,11 @@
 # Default initial positions for motoman_sia5f's ros2_control fake system
 
 initial_positions:
-  joint_b: -1.0076
-  joint_e: 0
-  joint_l: -0.944
-  joint_r: 0
-  joint_s: 0
-  joint_t: 0
-  joint_u: -0.8393
+  joint_b: -1.388614535331726
+  joint_e: 0.005482842214405537
+  joint_l: -0.13221091032028198
+  joint_r: 0.05248947814106941
+  joint_s: -1.6052273511886597
+  joint_t: 0.059695255011320114
+  joint_u: 0.03755974769592285
   right_joint: 0
