--- a/config/joint_limits.yaml
+++ b/config/joint_limits.yaml
@@ -48,7 +48,7 @@ joint_limits:
     max_velocity: 100.0
     has_acceleration_limits: false
     max_acceleration: 0
-  right_joint:
+  gripper_joint:
     has_velocity_limits: true
     max_velocity: 100.0
     has_acceleration_limits: false
